templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-hello-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-hello-app
  template:
    metadata:
      labels:
        app: my-hello-app
    spec:
      containers:
        - name: my-hello-app
          image: gcr.io/google-samples/hello-app:2.0
          ports:
          - containerPort: 8080
