templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-hello-app-service
spec:
  type: NodePort
  selector:
    app: my-hello-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
