templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: my-hello-app-ingress
    annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: my-hello-app.k8s.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-hello-app-service
                port:
                  number: 8080
